--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -564,6 +564,37 @@
     ]
   },
   {
+    "title": "Yamaha Exciter 135 côn tự động giá hơn 100 triệu đồng",
+    "content": "Yamaha Exciter 135 côn tự động đã trở lại thị trường Việt Nam với giá trên 100 triệu đồng, thông qua nhập khẩu tư nhân từ Malaysia. Mẫu xe này, còn được gọi là Yamaha 135LC, sở hữu động cơ 135 phân khối và có thiết kế tương tự như Exciter 135 đời 2011. Dù giá cao gấp đôi so với các dòng xe côn tay đang bán tại Việt Nam, nhưng mẫu xe này được cho là hiếm và có giá trị hoài niệm với một nhóm khách hàng yêu thích cá tính riêng.",
+    "link": "https://vnexpress.net/yamaha-exciter-135-con-tu-dong-gia-hon-100-trieu-dong-4859512.html",
+    "cat": "oto-xe-may",
+    "positivity": 7,
+    "importance": 6,
+    "question": "Yamaha Exciter 135 côn tự động có giá là bao nhiêu?",
+    "answers": [
+      {
+        "text": "Hơn 100 triệu đồng",
+        "correct": true
+      },
+      {
+        "text": "Dưới 50 triệu đồng",
+        "correct": false
+      },
+      {
+        "text": "Khoảng 70 triệu đồng",
+        "correct": false
+      },
+      {
+        "text": "Trên 150 triệu đồng",
+        "correct": false
+      },
+      {
+        "text": "Khoảng 40 triệu đồng",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Tạm giữ chủ quán, nhân viên karaoke bán ma túy cho 33 khách 'bay lắc'",
     "content": "Công an tỉnh Long An đã tạm giữ hình sự chủ quán Karaoke 368, Trần Thị Huế Phương, và nhân viên Trần Thiện Tâm, do liên quan đến việc mua bán và tổ chức sử dụng ma túy tại quán. Vào tối 9-3, kiểm tra quán karaoke, công an phát hiện 33 khách dương tính với ma túy, và thu giữ nhiều loại ma túy từ nhân viên quán. Tâm khai nhận đã bán ma túy cho khách để kiếm lời.",
     "link": "https://tuoitre.vn/tam-giu-chu-quan-nhan-vien-karaoke-ban-ma-tuy-cho-33-khach-bay-lac-2025031111182851.htm",
@@ -2226,33 +2257,6 @@
     ]
   },
   {
-    "title": "Xe con phóng nhanh gặp xe tải bất ngờ mở cửa",
-    "content": "Vào ngày 10/3 tại đường tỉnh 78, Ba Vì, một vụ việc giao thông đã xảy ra khi một xe con đang phóng nhanh với tốc độ hơn 60 km/h gặp phải xe tải đang đỗ lề đường bất ngờ mở cửa. Mặc dù tài xế xe con gắn camera hành trình không giảm tốc độ, may mắn là không có tai nạn xảy ra. Các chuyên gia nhấn mạnh tầm quan trọng của việc giảm tốc độ khi gặp xe lớn đỗ, đồng thời cảnh báo tài xế xe tải cần quan sát kỹ trước khi mở cửa xe để tránh sự cố. Theo luật mới, hành vi mở cửa không an toàn có thể bị phạt đến 22 triệu đồng nếu dẫn đến tai nạn.",
-    "link": "https://vnexpress.net/xe-con-phong-nhanh-gap-xe-tai-bat-ngo-mo-cua-4859155.html",
-    "cat": "oto-xe-may",
-    "positivity": 5,
-    "importance": 7,
-    "question": "Tại sao tài xế xe con nên giảm tốc độ khi thấy xe tải đỗ bên đường?",
-    "answers": [
-      {
-        "text": "Để tránh va chạm khi xe tải mở cửa bất ngờ.",
-        "correct": true
-      },
-      {
-        "text": "Để tiết kiệm nhiên liệu.",
-        "correct": false
-      },
-      {
-        "text": "Để tăng tốc độ di chuyển.",
-        "correct": false
-      },
-      {
-        "text": "Để giảm tiếng ồn khi lái xe.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Hà Nội cho phép nâng chiều cao khu tập thể Thành Công lên 40 tầng",
     "content": "Hà Nội đã cho phép quận Ba Đình nghiên cứu phương án nâng chiều cao tối đa lên 40 tầng cho khu chung cư cũ Thành Công trong quá trình cải tạo, tái thiết. Quyết định này nhằm kết nối không gian hồ Thành Công với các khu vực xanh và mở rộng trục đường nội khu. Thành phố yêu cầu quận phải hoàn thiện phương án trình Sở Quy hoạch Kiến trúc trước ngày 25/3, trong khi cũng đề xuất nâng cao tầng cho các khu chung cư khác trên địa bàn.",
     "link": "https://vnexpress.net/ha-noi-cho-phep-nang-chieu-cao-khu-tap-the-thanh-cong-len-40-tang-4859359.html",
@@ -2284,37 +2288,6 @@
     ]
   },
   {
-    "title": "Tỷ phú Elon Musk chỉ cách vui vẻ, tự tin học tập dù AI phát triển bùng nổ",
-    "content": "Tỷ phú Elon Musk gần đây đã chia sẻ hai lời khuyên cho những người trẻ trong bối cảnh trí tuệ nhân tạo (AI) phát triển mạnh mẽ, có khả năng thay thế nhiều công việc. Ông khuyến khích giới trẻ nên theo đuổi đam mê và trở nên hữu ích cho cộng đồng. Musk cũng nhấn mạnh tầm quan trọng của nỗ lực lao động để thích ứng với sự thay đổi do AI mang lại, đồng thời khuyến khích mọi người không nên nản lòng trước sự cạnh tranh từ công nghệ.",
-    "link": "https://dantri.com.vn/giao-duc/ty-phu-elon-musk-chi-cach-vui-ve-tu-tin-hoc-tap-du-ai-phat-trien-bung-no-20250310160338475.htm",
-    "cat": "gia-dinh",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Elon Musk đã đưa ra những lời khuyên gì cho giới trẻ trong bối cảnh AI phát triển?",
-    "answers": [
-      {
-        "text": "Theo đuổi đam mê và trở nên hữu ích cho cộng đồng",
-        "correct": true
-      },
-      {
-        "text": "Nên từ bỏ ước mơ và tìm một công việc ổn định",
-        "correct": false
-      },
-      {
-        "text": "Chỉ cần làm việc ít hơn 6 tiếng mỗi ngày",
-        "correct": false
-      },
-      {
-        "text": "Tập trung vào việc học các công nghệ mới",
-        "correct": false
-      },
-      {
-        "text": "Không cần lo lắng về sự phát triển của AI",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Người trẻ chọn sếp",
     "content": "Bài viết đề cập đến xu hướng ngày càng tăng trong giới trẻ khi chọn lựa sếp làm yếu tố quyết định khi tìm việc. Hà My và Thế Thành, hai nhân viên trẻ, đã chia sẻ trải nghiệm của họ về tầm quan trọng của người quản lý trong môi trường làm việc, cho thấy rằng sếp có khả năng lãnh đạo tốt và đồng cảm sẽ thu hút nhân tài. Các nghiên cứu chỉ ra rằng nhân viên trẻ ngày nay ưu tiên chọn sếp phù hợp hơn là chỉ đơn thuần tìm kiếm công ty có chế độ đãi ngộ tốt.",
     "link": "https://vnexpress.net/nguoi-tre-chon-sep-4857254.html",
@@ -2341,6 +2314,64 @@
       },
       {
         "text": "Vì họ muốn có thời gian làm việc thoải mái.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Xe con phóng nhanh gặp xe tải bất ngờ mở cửa",
+    "content": "Vào ngày 10/3 tại đường tỉnh 78, Ba Vì, một vụ việc giao thông đã xảy ra khi một xe con đang phóng nhanh với tốc độ hơn 60 km/h gặp phải xe tải đang đỗ lề đường bất ngờ mở cửa. Mặc dù tài xế xe con gắn camera hành trình không giảm tốc độ, may mắn là không có tai nạn xảy ra. Các chuyên gia nhấn mạnh tầm quan trọng của việc giảm tốc độ khi gặp xe lớn đỗ, đồng thời cảnh báo tài xế xe tải cần quan sát kỹ trước khi mở cửa xe để tránh sự cố. Theo luật mới, hành vi mở cửa không an toàn có thể bị phạt đến 22 triệu đồng nếu dẫn đến tai nạn.",
+    "link": "https://vnexpress.net/xe-con-phong-nhanh-gap-xe-tai-bat-ngo-mo-cua-4859155.html",
+    "cat": "oto-xe-may",
+    "positivity": 5,
+    "importance": 7,
+    "question": "Tại sao tài xế xe con nên giảm tốc độ khi thấy xe tải đỗ bên đường?",
+    "answers": [
+      {
+        "text": "Để tránh va chạm khi xe tải mở cửa bất ngờ.",
+        "correct": true
+      },
+      {
+        "text": "Để tiết kiệm nhiên liệu.",
+        "correct": false
+      },
+      {
+        "text": "Để tăng tốc độ di chuyển.",
+        "correct": false
+      },
+      {
+        "text": "Để giảm tiếng ồn khi lái xe.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Tỷ phú Elon Musk chỉ cách vui vẻ, tự tin học tập dù AI phát triển bùng nổ",
+    "content": "Tỷ phú Elon Musk gần đây đã chia sẻ hai lời khuyên cho những người trẻ trong bối cảnh trí tuệ nhân tạo (AI) phát triển mạnh mẽ, có khả năng thay thế nhiều công việc. Ông khuyến khích giới trẻ nên theo đuổi đam mê và trở nên hữu ích cho cộng đồng. Musk cũng nhấn mạnh tầm quan trọng của nỗ lực lao động để thích ứng với sự thay đổi do AI mang lại, đồng thời khuyến khích mọi người không nên nản lòng trước sự cạnh tranh từ công nghệ.",
+    "link": "https://dantri.com.vn/giao-duc/ty-phu-elon-musk-chi-cach-vui-ve-tu-tin-hoc-tap-du-ai-phat-trien-bung-no-20250310160338475.htm",
+    "cat": "gia-dinh",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Elon Musk đã đưa ra những lời khuyên gì cho giới trẻ trong bối cảnh AI phát triển?",
+    "answers": [
+      {
+        "text": "Theo đuổi đam mê và trở nên hữu ích cho cộng đồng",
+        "correct": true
+      },
+      {
+        "text": "Nên từ bỏ ước mơ và tìm một công việc ổn định",
+        "correct": false
+      },
+      {
+        "text": "Chỉ cần làm việc ít hơn 6 tiếng mỗi ngày",
+        "correct": false
+      },
+      {
+        "text": "Tập trung vào việc học các công nghệ mới",
+        "correct": false
+      },
+      {
+        "text": "Không cần lo lắng về sự phát triển của AI",
         "correct": false
       }
     ]
@@ -2400,33 +2431,6 @@
     ]
   },
   {
-    "title": "Cách phân biệt giữa 'va chạm giao thông' và 'tai nạn giao thông'",
-    "content": "Bài viết phân tích sự khác biệt giữa 'va chạm giao thông' và 'tai nạn giao thông' dựa trên mức độ gây thiệt hại về người và tài sản. Va chạm giao thông được định nghĩa là những sự cố có thiệt hại dưới mức quy định của tai nạn giao thông, như gây thương tích cho một người với tỷ lệ thương tật dưới 11% hoặc thiệt hại tài sản dưới 10 triệu đồng. Ngược lại, tai nạn giao thông có mức độ thiệt hại nghiêm trọng hơn, dẫn đến việc xử lý pháp lý khác nhau, trong đó tai nạn có thể bị truy cứu trách nhiệm hình sự.",
-    "link": "https://vnexpress.net/cach-phan-biet-giua-va-cham-giao-thong-va-tai-nan-giao-thong-4859145.html",
-    "cat": "phap-luat",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Va chạm giao thông khác tai nạn giao thông như thế nào?",
-    "answers": [
-      {
-        "text": "Va chạm giao thông có thiệt hại nhẹ hơn tai nạn giao thông.",
-        "correct": true
-      },
-      {
-        "text": "Va chạm giao thông luôn gây thiệt hại nặng nề.",
-        "correct": false
-      },
-      {
-        "text": "Tai nạn giao thông xảy ra chỉ với một xe.",
-        "correct": false
-      },
-      {
-        "text": "Va chạm giao thông không bao giờ bị phạt.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Bác sĩ vẽ bản đồ tim cứu sản phụ thoát cửa tử",
     "content": "Một sản phụ 36 tuổi đã thoát khỏi nguy cơ tử vong trong ca mổ sinh nhờ vào sự can thiệp kịp thời của bác sĩ. Trong quá trình mang thai, chị gặp phải tình trạng nhịp tim nhanh lên đến 190 lần/phút và không đáp ứng với thuốc điều trị. Các bác sĩ đã sử dụng kỹ thuật lập bản đồ tim 3D để xác định nguyên nhân và thực hiện đốt điện giúp nhịp tim trở lại bình thường, đảm bảo sự an toàn cho cả mẹ và bé.",
     "link": "https://vnexpress.net/bac-si-ve-ban-do-tim-cuu-san-phu-thoat-cua-tu-4858948.html",
@@ -2453,6 +2457,33 @@
       },
       {
         "text": "Không thực hiện mổ mà chỉ theo dõi tình trạng",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Cách phân biệt giữa 'va chạm giao thông' và 'tai nạn giao thông'",
+    "content": "Bài viết phân tích sự khác biệt giữa 'va chạm giao thông' và 'tai nạn giao thông' dựa trên mức độ gây thiệt hại về người và tài sản. Va chạm giao thông được định nghĩa là những sự cố có thiệt hại dưới mức quy định của tai nạn giao thông, như gây thương tích cho một người với tỷ lệ thương tật dưới 11% hoặc thiệt hại tài sản dưới 10 triệu đồng. Ngược lại, tai nạn giao thông có mức độ thiệt hại nghiêm trọng hơn, dẫn đến việc xử lý pháp lý khác nhau, trong đó tai nạn có thể bị truy cứu trách nhiệm hình sự.",
+    "link": "https://vnexpress.net/cach-phan-biet-giua-va-cham-giao-thong-va-tai-nan-giao-thong-4859145.html",
+    "cat": "phap-luat",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Va chạm giao thông khác tai nạn giao thông như thế nào?",
+    "answers": [
+      {
+        "text": "Va chạm giao thông có thiệt hại nhẹ hơn tai nạn giao thông.",
+        "correct": true
+      },
+      {
+        "text": "Va chạm giao thông luôn gây thiệt hại nặng nề.",
+        "correct": false
+      },
+      {
+        "text": "Tai nạn giao thông xảy ra chỉ với một xe.",
+        "correct": false
+      },
+      {
+        "text": "Va chạm giao thông không bao giờ bị phạt.",
         "correct": false
       }
     ]
@@ -2578,33 +2609,6 @@
     ]
   },
   {
-    "title": "Con trai Courtois nguy cơ vô gia cư",
-    "content": "Elsa Izac, tình cũ của thủ môn Thibaut Courtois, đang đối mặt với nguy cơ bị tịch thu nhà do khoản nợ 63.000 bảng tiền thế chấp. Cô và con trai 7 tuổi, Enzo, sống trong một ngôi nhà trị giá 3 triệu bảng tại Wimbledon, London, nhưng hiện tại đang gặp khó khăn tài chính. Elsa cho rằng Courtois không hỗ trợ đủ cho mẹ con cô, mặc dù thủ môn này có thu nhập hàng triệu USD từ câu lạc bộ Real Madrid.",
-    "link": "https://vnexpress.net/con-trai-courtois-nguy-co-vo-gia-cu-4859328.html",
-    "cat": "the-thao",
-    "positivity": 3,
-    "importance": 7,
-    "question": "Tại sao con trai Courtois và Elsa Izac lại gặp nguy cơ vô gia cư?",
-    "answers": [
-      {
-        "text": "Họ có khoản nợ 63.000 bảng tiền thế chấp.",
-        "correct": true
-      },
-      {
-        "text": "Họ không có đủ tiền chi tiêu hàng ngày.",
-        "correct": false
-      },
-      {
-        "text": "Ngôi nhà của họ bị hư hỏng nặng.",
-        "correct": false
-      },
-      {
-        "text": "Courtois không muốn chu cấp cho họ.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Đời buồn của cậu bé ước được đến trường",
     "content": "Bình An, 9 tuổi, mơ ước được đến trường nhưng đang phải đối mặt với căn bệnh ung thư máu. Gia đình cậu sống trong hoàn cảnh khó khăn, với thu nhập thấp và không đủ khả năng chi trả cho việc điều trị. Dù gặp nhiều khó khăn, mẹ cậu, chị Cẩm Tuyết, vẫn không từ bỏ hy vọng và cùng con chiến đấu với bệnh tật. Chương trình Mặt trời Hy vọng được triển khai nhằm hỗ trợ những trẻ em có hoàn cảnh khó khăn như Bình An.",
     "link": "https://vnexpress.net/doi-buon-cua-cau-be-uoc-duoc-den-truong-4859070.html",
@@ -2627,6 +2631,33 @@
       },
       {
         "text": "Được đi du lịch",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Con trai Courtois nguy cơ vô gia cư",
+    "content": "Elsa Izac, tình cũ của thủ môn Thibaut Courtois, đang đối mặt với nguy cơ bị tịch thu nhà do khoản nợ 63.000 bảng tiền thế chấp. Cô và con trai 7 tuổi, Enzo, sống trong một ngôi nhà trị giá 3 triệu bảng tại Wimbledon, London, nhưng hiện tại đang gặp khó khăn tài chính. Elsa cho rằng Courtois không hỗ trợ đủ cho mẹ con cô, mặc dù thủ môn này có thu nhập hàng triệu USD từ câu lạc bộ Real Madrid.",
+    "link": "https://vnexpress.net/con-trai-courtois-nguy-co-vo-gia-cu-4859328.html",
+    "cat": "the-thao",
+    "positivity": 3,
+    "importance": 7,
+    "question": "Tại sao con trai Courtois và Elsa Izac lại gặp nguy cơ vô gia cư?",
+    "answers": [
+      {
+        "text": "Họ có khoản nợ 63.000 bảng tiền thế chấp.",
+        "correct": true
+      },
+      {
+        "text": "Họ không có đủ tiền chi tiêu hàng ngày.",
+        "correct": false
+      },
+      {
+        "text": "Ngôi nhà của họ bị hư hỏng nặng.",
+        "correct": false
+      },
+      {
+        "text": "Courtois không muốn chu cấp cho họ.",
         "correct": false
       }
     ]
@@ -3815,6 +3846,33 @@
     ]
   },
   {
+    "title": "Chữa bàn chân bẹt cho trẻ 9 tuổi được không?",
+    "content": "Bài viết cung cấp thông tin về tình trạng bàn chân bẹt ở trẻ em và khả năng điều trị cho trẻ 9 tuổi. Bàn chân bẹt là tình trạng không có độ lõm ở lòng bàn chân, có thể gây đau nhức và ảnh hưởng đến các bộ phận khác của cơ thể. Phương pháp điều trị thường được khuyên là sử dụng đế chỉnh hình kết hợp với vật lý trị liệu, giúp tái tạo vòm bàn chân và ngăn ngừa biến chứng. Cha mẹ nên đưa trẻ đến bệnh viện để được khám và điều trị phù hợp.",
+    "link": "https://vnexpress.net/chua-ban-chan-bet-cho-tre-9-tuoi-duoc-khong-4859115.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Có thể chữa bàn chân bẹt cho trẻ 9 tuổi bằng đế chỉnh hình không?",
+    "answers": [
+      {
+        "text": "Có, sử dụng đế chỉnh hình kết hợp vật lý trị liệu.",
+        "correct": true
+      },
+      {
+        "text": "Không, bàn chân bẹt không thể chữa trị.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ có thể phẫu thuật khi trẻ lớn hơn.",
+        "correct": false
+      },
+      {
+        "text": "Bàn chân bẹt sẽ tự khỏi mà không cần điều trị.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Những thắc mắc thường gặp về dậy thì ở bé gái",
     "content": "Bài viết cung cấp thông tin về những thắc mắc thường gặp ở bé gái trong giai đoạn dậy thì, từ 9 đến 13 tuổi. Các thay đổi cơ thể như sự phát triển của ngực, tăng chiều cao, và sự xuất hiện của mụn trứng cá được đề cập. Những câu hỏi phổ biến như lý do đổ mồ hôi nhiều, sự phát triển của ngực, và tình trạng tăng cân cũng được giải thích. Đặc biệt, bài viết nhấn mạnh rằng những thay đổi này là bình thường và trẻ nên giữ gìn vệ sinh và tham khảo ý kiến bác sĩ khi cần.",
     "link": "https://vnexpress.net/nhung-thac-mac-thuong-gap-ve-day-thi-o-be-gai-4858975.html",
@@ -3864,33 +3922,6 @@
       },
       {
         "text": "Có thể tự khỏi mà không cần điều trị.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Chữa bàn chân bẹt cho trẻ 9 tuổi được không?",
-    "content": "Bài viết cung cấp thông tin về tình trạng bàn chân bẹt ở trẻ em và khả năng điều trị cho trẻ 9 tuổi. Bàn chân bẹt là tình trạng không có độ lõm ở lòng bàn chân, có thể gây đau nhức và ảnh hưởng đến các bộ phận khác của cơ thể. Phương pháp điều trị thường được khuyên là sử dụng đế chỉnh hình kết hợp với vật lý trị liệu, giúp tái tạo vòm bàn chân và ngăn ngừa biến chứng. Cha mẹ nên đưa trẻ đến bệnh viện để được khám và điều trị phù hợp.",
-    "link": "https://vnexpress.net/chua-ban-chan-bet-cho-tre-9-tuoi-duoc-khong-4859115.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Có thể chữa bàn chân bẹt cho trẻ 9 tuổi bằng đế chỉnh hình không?",
-    "answers": [
-      {
-        "text": "Có, sử dụng đế chỉnh hình kết hợp vật lý trị liệu.",
-        "correct": true
-      },
-      {
-        "text": "Không, bàn chân bẹt không thể chữa trị.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ có thể phẫu thuật khi trẻ lớn hơn.",
-        "correct": false
-      },
-      {
-        "text": "Bàn chân bẹt sẽ tự khỏi mà không cần điều trị.",
         "correct": false
       }
     ]
@@ -5043,33 +5074,6 @@
       },
       {
         "text": "5",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Chia sẻ bài đăng tìm con bị bắt cóc, hoang mang khi bài bị sửa thành kêu gọi từ thiện",
-    "content": "Mạng xã hội gần đây lan truyền thông tin về một bé trai 4 tuổi bị bắt cóc, thu hút hàng chục nghìn lượt chia sẻ. Tuy nhiên, sau đó bài đăng này đã bị chỉnh sửa thành lời kêu gọi từ thiện với số tài khoản cá nhân đính kèm, khiến nhiều người hoang mang và lo lắng. Chị Trần Thị Thanh, một trong những người chia sẻ bài viết, đã bàng hoàng khi phát hiện ra sự thay đổi này. Các chuyên gia cảnh báo về việc kiểm chứng thông tin trước khi chia sẻ để tránh tiếp tay cho các hành vi lừa đảo.",
-    "link": "https://tuoitre.vn/chia-se-bai-dang-tim-con-bi-bat-coc-hoang-mang-khi-bai-bi-sua-thanh-keu-goi-tu-thien-20250310115910177.htm",
-    "cat": "phap-luat",
-    "positivity": 2,
-    "importance": 8,
-    "question": "Bài đăng về bé trai bị bắt cóc đã bị chỉnh sửa thành nội dung gì?",
-    "answers": [
-      {
-        "text": "Kêu gọi từ thiện",
-        "correct": true
-      },
-      {
-        "text": "Tin tức về bão lũ",
-        "correct": false
-      },
-      {
-        "text": "Thông tin về một vụ án",
-        "correct": false
-      },
-      {
-        "text": "Hướng dẫn chăm sóc trẻ em",
         "correct": false
       }
     ]
